# repro_rules_js_362

./: .bazelignore  .bazelrc  BUILD.bazel  README.md  WORKSPACE  index.html  node_version.bzl  package.json  pnpm-lock.yaml  vite.config.js
.devcontainer/: devcontainer.json
.devcontainer/devcontainer/: Dockerfile
bazel/: next.bzl
pages/: index.tsx
src/: index.jsx
