load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:next/package_json.bzl", next_bin = "bin")
load("//bazel:next.bzl", "next")

npm_link_all_packages(name = "node_modules")

next(
    name = "next",
    srcs = glob([
        "pages/**",
        "public/**",
        "styles/**",
    ]),
    data = [
        "next.config.js",
        "package.json",
        ":node_modules",
    ],
    next_bin = "./node_modules/.bin/next",
    next_js_binary = ":next_js_binary",
)

next_bin.next_binary(
    name = "next_js_binary",
)
