load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:next/package_json.bzl", next_bin = "bin")
load("//bazel:next.bzl", "next")
load("@rules_nodejs//nodejs:toolchain.bzl", "node_toolchain")

npm_link_all_packages(name = "node_modules")

next(
    name = "next",
    srcs = glob([
        "pages/**",
        "public/**",
        "styles/**",
    ]),
    data = [
        "next.config.js",
        "package.json",
        ":node_modules",
    ],
    next_bin = "./node_modules/.bin/next",
    next_js_binary = ":next_js_binary",
)

next_bin.next_binary(
    name = "next_js_binary",
)

toolchain(
    name = "node_macos_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":node_macos",
    toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
)

# Custom node build https://github.com/aspect-build/node/commit/6616ddd629f9417e0ac2826910ff9756b01cfe34 that resolves
# the esm import escaping issue https://github.com/aspect-build/rules_js/issues/362
node_toolchain(
    name = "node_macos",
    target_tool_path = "/Users/greg/aspect/oss/node/out/Release/node",
)
