load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vite/package_json.bzl", vite_bin = "bin")
load("@rules_nodejs//nodejs:toolchain.bzl", "node_toolchain")
load("node_version.bzl", "node_version")

npm_link_all_packages(name = "node_modules")

BUNDLE_DEPS = [
    "//:node_modules/react",
    "//:node_modules/react-dom",
]

# The build succeeds even without these dependencies
VITE_DEPS = [
   # "//:node_modules/@vitejs/plugin-react",
   # "//:node_modules/vite",
]

vite_bin.vite(
    name = "build",
    args = ["build"],
    out_dirs = ["build"],
    srcs = ["src/index.jsx", "index.html", "vite.config.js"] + BUNDLE_DEPS + VITE_DEPS,
)

toolchain(
    name = "node_custom_toolchain",
    exec_compatible_with = [
        '@platforms//os:linux',
        # NOTE: Change if running on x86_64 hardware
        '@platforms//cpu:aarch64',
    ],
    toolchain = ":node_custom",
    toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
)

# Tried if the custom node build (https://github.com/aspect-build/node/commit/6616ddd629f9417e0ac2826910ff9756b01cfe34) fixes this issue
# but it didn't
node_toolchain(
    name = "node_custom",
    target_tool_path = "/workspaces/repro_rules_js_362/node",
)


node_version(name = "node_version")